--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.4",
+    "next": "14.2.5",
+    "postcss": "^8.4.41",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "tailwindcss": "^3.4.10"
   }
 }
